@@ -1,12 +1,11 @@
 package com.edu.austral.ingsis.controllers;
 
-import com.edu.austral.ingsis.dtos.CreatePostDTO;
-import com.edu.austral.ingsis.dtos.UpdatePostDTO;
-import com.edu.austral.ingsis.dtos.PostDTO;
+import com.edu.austral.ingsis.dtos.post.CreatePostDTO;
+import com.edu.austral.ingsis.dtos.post.UpdatePostDTO;
+import com.edu.austral.ingsis.dtos.post.PostDTO;
 import com.edu.austral.ingsis.entities.Post;
 import com.edu.austral.ingsis.services.PostService;
 import com.edu.austral.ingsis.utils.NotFoundException;
-import com.edu.austral.ingsis.utils.ObjectMapper;
 import com.edu.austral.ingsis.utils.ObjectMapperImpl;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
@@ -14,11 +13,15 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.server.ResponseStatusException;
 
 import javax.validation.Valid;
+import java.util.List;
+
+import static com.edu.austral.ingsis.utils.ConnectMicroservices.getFromJson;
+import static com.edu.austral.ingsis.utils.ConnectMicroservices.getRequestEntity;
 
 @RestController
 public class PostController {
 
-  private final ObjectMapper objectMapper;
+  private final com.edu.austral.ingsis.utils.ObjectMapper objectMapper;
   private final PostService postService;
   private final RestTemplate restTemplate;
 
@@ -35,8 +38,8 @@ public class PostController {
             getRequestEntity(),
             String.class);
     final String user = responseEntity.getBody();
-//    createPostDTO.setUserId(new Long());
-    final Post post = postService.create(objectMapper.map(createPostDTO, Post.class));
+    createPostDTO.setUserId(Long.valueOf(getFromJson(user, "id")));
+    final Post post = postService.create(objectMapper.map(createPostDTO, Post.class), createPostDTO.getThreadId());
     return ResponseEntity.ok(objectMapper.map(post, PostDTO.class));
   }
 
@@ -44,6 +47,12 @@ public class PostController {
   public ResponseEntity<PostDTO> getPost(@PathVariable Long id) {
     final Post post = postService.getById(id);
     return ResponseEntity.ok(objectMapper.map(post, PostDTO.class));
+  }
+
+  @GetMapping("/posts")
+  public ResponseEntity<List<PostDTO>> getPosts() {
+    final List<Post> posts = postService.getAll();
+    return ResponseEntity.ok(objectMapper.map(posts, PostDTO.class));
   }
 
   @PutMapping("/{id}")
@@ -59,13 +68,7 @@ public class PostController {
 
   @DeleteMapping("/{id}")
   public ResponseEntity<PostDTO> updatePost(@PathVariable Long id) {
-    postService.delete(id);
+    postService.delete(postService.getById(id));
     return ResponseEntity.noContent().build();
-  }
-
-  private HttpEntity<Object> getRequestEntity() {
-    HttpHeaders headers = new HttpHeaders();
-    headers.setContentType(MediaType.APPLICATION_JSON);
-    return new HttpEntity<>(headers);
   }
 }
